--- a/ui/src/components/ShoppingCart.css
+++ b/ui/src/components/ShoppingCart.css
@@ -23,6 +23,8 @@
   display: grid;
   grid-template-columns: 1fr 350px;
   gap: 2rem;
+  position: relative;
+  min-height: 200px;
 }
 
 @media (max-width: 1024px) {
@@ -34,8 +36,7 @@
 .cart-items-section {
   display: flex;
   flex-direction: column;
-  min-height: 200px;
-  position: relative;
+  gap: 1rem;
 }
 
 .cart-items {
